feat: add ability to login with signature, FIP 63
