# swagger/swagger.json
@@ -1809,6 +1809,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "group name",
+                        "name": "groupName",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "file path",
                         "name": "filePath",
                         "in": "query",
@@ -4558,6 +4565,59 @@
                 }
             }
         },
+        "/v2/user/login-with-signature": {
+            "post": {
+                "description": "login user with signature described in https://github.com/fairDataSociety/FIPs/blob/master/text/0063-external-account-generator.md",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Login User with signature",
+                "operationId": "user-login-signature",
+                "parameters": [
+                    {
+                        "description": "signature and password",
+                        "name": "user_request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.UserSignatureLoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.UserLoginResponse"
+                        },
+                        "headers": {
+                            "Set-Cookie": {
+                                "type": "string",
+                                "description": "fairos-dfs session"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.response"
+                        }
+                    }
+                }
+            }
+        },
         "/v2/user/present": {
             "get": {
                 "description": "checks if the new user is present in the new ENS based authentication",
@@ -4683,6 +4743,9 @@
                 "dirPath": {
                     "type": "string"
                 },
+                "groupName": {
+                    "type": "string"
+                },
                 "mode": {
                     "type": "string"
                 },
@@ -4706,6 +4769,9 @@
             "type": "object",
             "properties": {
                 "dirPath": {
+                    "type": "string"
+                },
+                "groupName": {
                     "type": "string"
                 },
                 "podName": {
@@ -4800,6 +4866,9 @@
                 "filePath": {
                     "type": "string"
                 },
+                "groupName": {
+                    "type": "string"
+                },
                 "podName": {
                     "type": "string"
                 }
@@ -4809,6 +4878,9 @@
             "type": "object",
             "properties": {
                 "filePath": {
+                    "type": "string"
+                },
+                "groupName": {
                     "type": "string"
                 },
                 "mode": {
@@ -4826,6 +4898,9 @@
                     "type": "string"
                 },
                 "filePath": {
+                    "type": "string"
+                },
+                "groupName": {
                     "type": "string"
                 },
                 "podName": {
@@ -5255,6 +5330,9 @@
         "common.RenameRequest": {
             "type": "object",
             "properties": {
+                "groupName": {
+                    "type": "string"
+                },
                 "newPath": {
                     "type": "string"
                 },
@@ -5273,6 +5351,17 @@
                     "type": "string"
                 },
                 "userName": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.UserSignatureLoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "signature": {
                     "type": "string"
                 }
             }
